made changes to files to make more responsive

--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 600px) {
+  .intro-title {
+    font-size: 3rem;
+    padding: 1rem;
+    margin: 1rem;
+  }
+}
+
 #about {
     padding-top: 50px;
     padding-bottom: 50px;
