--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
+
 @media only screen and (max-width: 600px) {
   .intro-title {
     font-size: 3rem;
